--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
             </div>
             <div class="msg">
                 Don't have account?
-                <a href="#">Sign up</a>
+                <a href="smzer.github.io/sign">Sign up</a>
             </div>
         </div>
     </div>
